Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18585

Annotate_rows_log_event written for each wsrep streaming fragment

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL)
    • 10.4.3
    • Galera
    • None

    Description

      Annotate_rows_log_event is written for each wsrep streaming fragment.

      To reproduce, start servers with the following options:

      wsrep-trx-fragment-size=1
      wsrep-trx-fragment-unit=ROWS
      log-bin
      log-slave-updates
      log-bin-index=binlog-index
      

      Run the following statements:

      CREATE TABLE t1 (f1 INT PRIMARY KEY);
      INSERT INTO t1 VALUES (1),(2);
      

      Now binlog contains INSERT statement twice:

      $ .mysqlbinlog mysqld-bin.000003 | grep '#Q> INSERT INTO'
      #Q> INSERT INTO t1 VALUES (1),(2)
      #Q> INSERT INTO t1 VALUES (1),(2)
      

      This behavior will effectively make replication traffic scale as N^2 with small fragment sizes and bulk inserts with N rows.

      Attachments

        Activity

          People

            teemu.ollakka Teemu Ollakka
            teemu.ollakka Teemu Ollakka
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: